Fix Bug: Link parameter group_id missing

--- a/xoops_trust_path/modules/legroup/templates/legroup_member_list.html
+++ b/xoops_trust_path/modules/legroup/templates/legroup_member_list.html
@@ -1,6 +1,7 @@
 <div id="legroup">
 <ul class="nav nav-pills">
-  <li><a href="<{xoops_cooluri dirname=$dirname dataname=$dataname action=edit}>"><{$smarty.const._MD_LEGROUP_LANG_ADD_A_NEW_MEMBER}></a></li>
+  <{assign var=groupId value=$group->getShow('group_id')}>
+  <li><a href="<{xoops_cooluri dirname=$dirname dataname=$dataname action=edit query="group_id=`$groupId`"}>"><{$smarty.const._MD_LEGROUP_LANG_ADD_A_NEW_MEMBER}></a></li>
 </ul>
 
 <header>
