--- a/xoops_trust_path/modules/legroup/templates/legroup_member_list.html
+++ b/xoops_trust_path/modules/legroup/templates/legroup_member_list.html
@@ -1,7 +1,7 @@
 <div id="legroup">
 <ul class="nav nav-pills">
   <{assign var=groupId value=$group->getShow('group_id')}>
-  <li><a href="<{xoops_cooluri dirname=$dirname dataname=$dataname action=edit query="group_id=`$groupId`"}>"><{$smarty.const._MD_LEGROUP_LANG_ADD_A_NEW_MEMBER}></a></li>
+  <li><a href="<{xoops_cooluri dirname=$dirname dataname=$dataname action=add query="group_id=`$groupId`"}>"><{$smarty.const._MD_LEGROUP_LANG_ADD_A_NEW_MEMBER}></a></li>
 </ul>
 
 <header>
@@ -16,6 +16,12 @@
       <td><{$obj->getShow('uid')|xoops_user:user_name}><{if $myrank>=7 && $myrank>=$obj->getShow('rank')}><{assign var=groupId value=$obj->getShow('group_id')}><a href="<{xoops_cooluri dirname=$dirname dataname=$dataname data_id=$obj->getShow('member_id') action=approve query="group_id=$groupId"}>"> <i class="icon-pencil"></i></a><{/if}></td>
       <td><{$obj->getShowRank()}></td>
       <td><{if $obj->isApproved()===true}><{$smarty.const._MD_LEGROUP_LANG_APPROVED}><{else}><a href="<{xoops_cooluri dirname=$dirname dataname=member data_id=$obj->getShow('member_id') action=approve"}>" class="btn btn-mini btn-warning"><i class="icon-ok"></i> <{$smarty.const._MD_LEGROUP_LANG_NOT_APPROVED}></a><{/if}></td>
+      <{if $myrank=='9'}>
+      <td>
+        <a href="<{xoops_cooluri dirname=$dirname dataname=$dataname data_id=$obj->getShow('member_id') action=approve}>"><{$smarty.const._EDIT}></a>
+        <a href="<{xoops_cooluri dirname=$dirname dataname=$dataname data_id=$obj->getShow('member_id') action=delete}>"><{$smarty.const._DELETE}></a>
+      </td>
+      <{/if}>
     </tr>
   <{/foreach}>
   </tbody>
