--- a/xoops_trust_path/modules/legroup/templates/legroup_member_add.html
+++ b/xoops_trust_path/modules/legroup/templates/legroup_member_add.html
@@ -30,7 +30,7 @@
   <div class="form-actions">
     <div class="controls">
       <{xoops_token form=$actionForm}>
-      <{xoops_input type=hidden name=member_id value=$actionForm->get('member_id')}>
+      <{xoops_input type=hidden name=member_id value=0}>
       <{xoops_input type=hidden name=group_id value=$actionForm->get('group_id')}>
       <{xoops_input type=hidden name=rank value=$actionForm->get('rank')}>
       <button type="submit" class="btn btn-primary"><{$smarty.const._SUBMIT}></button>
