--- a/xoops_trust_path/modules/legroup/templates/legroup_member_delete.html
+++ b/xoops_trust_path/modules/legroup/templates/legroup_member_delete.html
@@ -1,7 +1,7 @@
 <div id="legroup">
-<header>
+<div class="page-header">
   <h1><{$smarty.const._MD_LEGROUP_LANG_MEMBER_DELETE}></h1>
-</header>
+</div>
 
 <div class="alert"><{$smarty.const._MD_LEGROUP_MESSAGE_CONFIRM_DELETE}></div>
 
