--- a/xoops_trust_path/modules/legroup/templates/legroup_policy_edit.html
+++ b/xoops_trust_path/modules/legroup/templates/legroup_policy_edit.html
@@ -1,7 +1,7 @@
 <div id="legroup">
-<header>
+<div class="page-header">
   <h1><{$targetModule}> <{$smarty.const._MD_LEGROUP_LANG_POLICY_EDIT}> : <{$group->getShow('title')}></h1>
-</header>
+</div>
 
 <{if $actionForm->hasError()}>
   <ul class="alert alert-error">
